<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToDo</string>
    <string name="new_todo">New ToDo</string>
    <string name="update_todo">Update ToDo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_task">Delete ToDo</string>
    <string name="delete_task_question">Are you sure you want to delete this ToDo?</string>
    <string name="confirm">CONFIRM</string>
    <string name="details_title">Details</string>
    <string name="edit">Edit</string>
    <string name="activeTodosSwitch">Show only active todos</string>
    <string name="notifications">Notifications</string>
    <string name="before">Moment of notification</string>
    <string name="display">Display</string>
    <string name="notifToggle">turn on/off notifications</string>
    <string name="category">Category</string>
    <string name="search_by_title">Search by title...</string>
    <string name="permission_request_title">Permission Request</string>
    <string name="permission_request_message">The app needs permission to schedule exact alarms for accurate notifications.</string>
    <string name="grant_permission">GRANT PERMISSION</string>
    <string name="alarm_reminder_working">Alarms and reminders are working</string>
    <string name="todo_categories_title">Todo Categories</string>
    <string name="todo_categories_summary">Select categories for todo items</string>
    <string name="created">Created:</string>
    <string name="todo_reminder_title">Todo Reminder</string>
    <string name="todo_reminder_content">Reminder for:</string>
    <string name="todo_notification_channel_name">Todo Notification Channel</string>
    <string name="todo_notification_channel_description">Channel for reminders of Todo items</string>
    <string name="select_todo_categories">Select Todo Categories</string>
</resources>